<resources>
    <string name="app_name">E-commerce Project</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hot_sell">热销新品</string>
    <string name="person_information">个人资料</string>
    <string name="person_circle">我的圈子</string>
    <string name="person_foot">我的足迹</string>
    <string name="person_wallet">我的钱包</string>
    <string name="person_address">我的收货地址</string>
    <string name="information_tv">我的资料</string>
    <string name="information_icon">我的头像</string>
    <string name="information_nick_name">我的昵称</string>
    <string name="information_password">我的密码</string>
    <string name="wallet_balance">余额</string>
    <string name="wallet_monetary">消费金额</string>
    <string name="wallet_consumption_time">消费时间</string>
</resources>
